# BoatRamp

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  boatramp.cfg.example  clippy.toml  deny.toml  flake.nix  fly.toml  justfile  rust-toolchain.toml  typos.toml
.github/workflows/: cache.yml  ci.yml  deploy-docs.yml  deploy-image.yml  nightly.yml  release.yml  vmlinux-release-boot.yml  vmlinux.yml
charts/boatramp-operator/: Chart.yaml  README.md  values.yaml
crates/boatramp/: Cargo.toml
crates/boatramp-acme/: Cargo.toml
crates/boatramp-acme/src/: acme.rs  akamai.rs  azure_dns.rs  cloudflare.rs  digitalocean.rs  dns.rs  dnsimple.rs  gcp_dns.rs  hetzner.rs  lib.rs  ns1.rs  oci.rs  route53.rs
crates/boatramp-acme/tests/: pebble_dns01.rs
crates/boatramp-cloudflare/: Cargo.toml
crates/boatramp-cloudflare/src/: lib.rs
crates/boatramp-cluster/: Cargo.toml
crates/boatramp-cluster/src/: http.rs  lib.rs  mesh.rs  messaging.rs  node.rs  persist.rs  raft.rs
crates/boatramp-console/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/boatramp-console/src/: api.rs  auth.rs  config_editor.rs  dashboard.rs  deploy_ops.rs  format.rs  hooks.rs  lib.rs  logstream.rs  main.rs  maintenance.rs  models.rs  observability.rs  oidc.rs  tokens.rs  verify.rs  widgets.rs
crates/boatramp-console/tests/: render.rs
crates/boatramp-container/: Cargo.toml
crates/boatramp-container/src/: backend.rs  lib.rs  logsink.rs  net.rs  sandbox.rs  seccomp.rs  worker.rs
crates/boatramp-core/: Cargo.toml
crates/boatramp-core/src/: blob_provision.rs  cache_coherence.rs  cedar.rs  cert.rs  compat.rs  compute.rs  cose.rs  deploy.rs  envelope.rs  error.rs  ipam.rs  kernel_trust.rs  kv.rs  lib.rs  messaging.rs  mode.rs  sql.rs  time.rs
crates/boatramp-docker/: Cargo.toml
crates/boatramp-docker/src/: lib.rs
crates/boatramp-docker/tests/: docker_live.rs
crates/boatramp-firecracker/: Cargo.toml  build.rs
crates/boatramp-firecracker/src/: api.rs  backend.rs  config.rs  device_manager.rs  embedded.rs  embedded_backend.rs  embedded_seccomp.rs  embedded_snapshot.rs  embedded_vmm.rs  executor.rs  kernel_verify.rs  lib.rs  mptable.rs  net.rs  oci.rs  tap.rs  virtio_block.rs  virtio_mmio.rs  virtio_net.rs  vminit.c
crates/boatramp-firecracker/tests/: embedded_backend_live.rs  fc_live.rs
crates/boatramp-handlers/: Cargo.toml
crates/boatramp-handlers/src/: engine.rs  lib.rs  logging.rs
crates/boatramp-handlers/src/bindings/: blobstore.rs  keyvalue.rs  messaging.rs  mod.rs  sql.rs
crates/boatramp-handlers/tests/: serve.rs
crates/boatramp-handlers/tests/fixtures/: event-consumer.wasm  http-200.wasm  kv-counter.wasm  sql-counter.wasm
crates/boatramp-handlers/wit/: world.wit
crates/boatramp-rpktls/: Cargo.toml
crates/boatramp-rpktls/src/: lib.rs
crates/boatramp-server/: Cargo.toml  build.rs
crates/boatramp-server/src/: admin_api.rs  auth.rs  console.rs  content.rs  control_api.rs  domain_verify.rs  envelope.rs  function_api.rs  function_runtime.rs  gateway.rs  handler_dispatch.rs  host.rs  http3.rs  lib.rs  limits.rs  logs.rs  metrics.rs  oidc.rs  operator.rs  proxy.rs  ratelimit.rs  routes.rs  scheduler.rs  serve_pipeline.rs  srvmetrics.rs  stream.rs  verification_pending.html  workflow.rs
crates/boatramp-server/src/signer/: aws_kms.rs  azure.rs  gcp.rs  mod.rs  pkcs11.rs  rest.rs  vault.rs
crates/boatramp-server/tests/: conformance.rs
crates/boatramp-storage/: Cargo.toml
crates/boatramp-storage/examples/: kv_bench.rs
crates/boatramp-storage/src/: azure.rs  azure_notify.rs  cache.rs  fs.rs  gcs.rs  gcs_notify.rs  kv_cloudflare.rs  kv_slatedb.rs  lib.rs  s3.rs  s3_notify.rs  sql_libsql.rs  sql_sqlx.rs
crates/boatramp-storage/tests/: azure_emulator.rs  azure_notify_live.rs  gcs_emulator.rs  gcs_notify_live.rs  s3_minio.rs  s3_notify_live.rs  sql_libsql.rs  sql_sqlx_live.rs
crates/boatramp-types/: Cargo.toml
crates/boatramp-types/src/: access.rs  authz.rs  blob_notify.rs  cert.rs  compute.rs  config.rs  cron.rs  daemon_config.rs  deploy.rs  dns_managed.rs  domain_verify.rs  error.rs  file.rs  function.rs  gateway.rs  geo.rs  lib.rs  manifest.rs  matcher.rs  predicate.rs  route.rs  security.rs  waf.rs  workflow.rs
crates/boatramp/src/: access.rs  acme_dns.rs  alias.rs  authcmd.rs  blob.rs  build.rs  bundle.rs  client.rs  cloudflare.rs  cluster.rs  cluster_tls.rs  completions.rs  compute.rs  config.rs  config_cmd.rs  dlq.rs  dns.rs  domains.rs  error.rs  function.rs  gateway.rs  handler_validate.rs  join.rs  logs.rs  main.rs  manage.rs  security.rs  serve.rs  sync.rs  token.rs  workflow.rs
crates/boatramp/src/function/: build.rs  scaffold.rs
crates/boatramp/src/operator/: controller.rs  crd.rs  executor.rs  function.rs  manifests.rs  membership.rs  mod.rs  resources.rs  site.rs
crates/boatramp/src/serve/: backends.rs
crates/boatramp/templates/js/: handler.js  package.json.tmpl
crates/boatramp/templates/python/: .gitignore  app.py  pyproject.toml.tmpl
crates/boatramp/templates/rust/: Cargo.toml.tmpl
crates/boatramp/templates/rust/src/: lib.rs
crates/boatramp/tests/: rpk_pinning.rs
docs/: ARCHITECTURE-kv.md  CLOUDFLARE.md  KEYSPACE.md  OPERATING.md  book.toml  rust-idiomaticity-catalog.md
docs/src/: SUMMARY.md  contributing.md  index.md  introduction.md
docs/src/architecture/: overview.md  (+2 more)
docs/theme/: custom.css
examples/handlers/event-consumer/: Cargo.toml
examples/handlers/event-consumer/src/: lib.rs
examples/handlers/event-consumer/wit/: world.wit
examples/handlers/http-200/: Cargo.toml
examples/handlers/http-200/src/: lib.rs
examples/handlers/kv-counter/: Cargo.toml
examples/handlers/kv-counter/src/: lib.rs
examples/handlers/kv-counter/wit/: world.wit
examples/site/: README.md  index.html  project.cfg.example
nix/: nixos-module.nix  package.nix
packaging/: README.md
packaging/deb/: postinst  postrm  prerm
packaging/install/: install.ps1
packaging/systemd/: boatramp.service  boatramp.sysusers  boatramp.tmpfiles
scripts/: e2e-k8s.sh  e2e.Dockerfile
templates/: AGENTS.md
(+95 files in other folders)
