[package]
name = "boatramp-firecracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Firecracker microVM executor for boatramp tier-3 compute: API config, IPAM, placement"

[features]
# The OCI→ext4 rootfs build pipeline: pull an image, overlay
# its layers (honoring whiteouts), and `mke2fs -d` an ext4 image. Pulls tar +
# flate2 + an async HTTP client; off by default so the executor's pure config/
# IPAM/placement layer stays dependency-light. The layer-overlay logic is
# unit-tested; the registry pull (network) + `mke2fs` (e2fsprogs) are host seams.
build = ["dep:tar", "dep:flate2", "dep:reqwest", "dep:hex", "dep:sha2"]
# The VMM `ComputeBackend` impl: wraps the
# `Executor` behind `boatramp_core::compute::ComputeBackend`, staging blobs from
# `Storage` and driving the (blocking) executor off the async runtime. Pulls
# boatramp-core + an async runtime; off by default so the pure config/IPAM/
# executor layer stays dependency-light.
backend = ["dep:boatramp-core", "dep:async-trait", "dep:tokio", "dep:futures"]
# The embedded rust-vmm VMM:
# boot the guest in-process under KVM instead of spawning the external
# `firecracker` binary. Pulls the rust-vmm crates (Linux-only); off by default so
# the pure config/IPAM/executor + boot-layout (`embedded`) layer stays
# dependency-light. The KVM machine/vCPU runtime is the `compute-live` seam.
embedded = [
  "dep:kvm-ioctls",
  "dep:kvm-bindings",
  "dep:vm-memory",
  "dep:linux-loader",
  "dep:virtio-queue",
  "dep:vm-superio",
  "dep:vmm-sys-util",
  "dep:nix",
  "dep:seccompiler",
  "dep:syscalls",
  "dep:caps",
]

# Re-exec target for the embedded VMM backend's per-VM jailed subprocess (test +
# standalone). Production re-execs the `boatramp` binary's `__vmm-run` subcommand;
# this lets the crate's own integration test be self-contained.
[[bin]]
name = "vmm-worker"
required-features = ["embedded", "backend"]

[dependencies]
boatramp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ipnet.workspace = true

# `build` feature (OCI→ext4): layer overlay + registry pull.
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# `backend` feature (the VMM `ComputeBackend`).
boatramp-core = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
# `+ time` for the health-probe connect timeout (workspace tokio omits it).
tokio = { workspace = true, optional = true, features = ["time"] }
futures = { workspace = true, optional = true }

# `embedded` feature (the in-process rust-vmm VMM) — Linux/KVM only.
[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = { version = "0.19", optional = true }
kvm-bindings = { version = "0.10", optional = true, features = [
  "fam-wrappers",
] }
vm-memory = { version = "0.16", optional = true, features = ["backend-mmap"] }
linux-loader = { version = "0.13", optional = true }
virtio-queue = { version = "0.14", optional = true }
vm-superio = { version = "0.8", optional = true }
vmm-sys-util = { version = "0.12", optional = true }
# Tap device ioctl (TUNSETIFF) + the RX-poll loop for virtio-net + the
# signal/pthread machinery to interrupt a blocked `KVM_RUN` for clean VM stop +
# `prctl` (`no_new_privs`) for the seccomp sandbox.
nix = { version = "0.29", optional = true, features = [
  "ioctl",
  "poll",
  "signal",
  "pthread",
  "process",
  "fs",
] }
# Sandbox the VM thread: compile the run-loop syscall allow-list to BPF
# (`seccompiler`, Firecracker's compiler) + resolve syscall names (`syscalls`),
# and drop capabilities (`caps`). Linux-only, with the `embedded` runtime.
seccompiler = { version = "0.4", optional = true }
syscalls = { version = "0.6", optional = true }
caps = { version = "0.5", optional = true }

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
# The `fc_live` integration test (ignored; KVM-host only) builds an `FcMachine`
# from a `ComputeSpec` + an `IpPool`, so it needs the shared types + core.
boatramp-types.workspace = true
boatramp-core.workspace = true
# The `embedded_backend_live` integration test (ignored; KVM-host only) drives the
# `ComputeBackend` trait directly, so it needs the async runtime + trait macro
# (the crate's own copies are optional deps, invisible to a test crate).
async-trait.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "time",
  "net",
  "io-util",
] }

# `test-utils` exposes virtio-queue's `MockSplitQueue` for the embedded VMM's
# queue-bridge tests (build a real ring in guest memory, no `/dev/kvm`). Linux-
# only, matching the `embedded` module + its virtio-queue dep.
[target.'cfg(target_os = "linux")'.dev-dependencies]
virtio-queue = { version = "0.14", features = ["test-utils"] }

[lints]
workspace = true
