[package]
name = "boatramp-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly handler engine for boatramp (wasmtime component runtime)"

[features]
# The wasmtime engine is heavy; it is off by default so `cargo build
# --workspace` stays lean. The server enables it via its `handlers` feature.
default = []
engine = [
  "dep:wasmtime",
  "dep:wasmtime-wasi",
  "dep:wasmtime-wasi-http",
  "dep:wasmtime-wasi-io",
  "dep:lru",
  "dep:http",
  "dep:http-body-util",
  "dep:hyper",
  "dep:bytes",
  "dep:futures",
  "dep:tracing",
  "tokio/sync",
  "tokio/rt",
  "tokio/time",
  # `net` for the SSRF egress guard's DNS resolution.
  "tokio/net",
]
# The `sql` handler binding (wasi:sql-shaped). Engine-agnostic: it talks only to
# `boatramp_core::sql::SqlBackend`; the concrete database (libsql, single-node
# file or sqld namespace) is a `boatramp-storage` backend the server wires in.
sql = ["engine"]
# The `wasi:messaging` producer binding: publish to boatramp's internal
# `boatramp_core::messaging::Messaging` substrate. (Consumer dispatch is the
# server's job.)
messaging = ["engine"]

[dependencies]
boatramp-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-http = { workspace = true, optional = true }
wasmtime-wasi-io = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# For the in-memory `Storage` test double (the trait is `#[async_trait]`).
async-trait.workspace = true

[lints]
workspace = true
